Permissions in Course Configuration no longer allows the user to lock themselves out by setting the permission to 'nobody'. #11

--- a/conf/defaults.config
+++ b/conf/defaults.config
@@ -591,7 +591,7 @@ $authen{proctor_module} = "WeBWorK::Authen::Proctor";
 	ta            => 5,
 	professor     => 10,
 	admin         => 20,
-	nobody        => 99999999, # insure that nobody comes at the end
+	nobody        => 99999999, # ensure that nobody comes at the end
 );
 
 # this hash maps operations to the roles that are allowed to perform those
@@ -1245,13 +1245,13 @@ $ConfigValues = [
 	['Permissions',
 		{ var => 'permissionLevels{login}',
 		  doc => 'Allowed to login to the course',
-		  type => 'permission',
+		  type => 'PermissionWithoutNobody',
 		  hashVar => '{permissionLevels}->{login}'
 		},
 		{ var => 'permissionLevels{change_password}',
 		  doc => 'Allowed to change their password',
 		  doc2 => 'Users at this level and higher are allowed to change their password. Normally guest users are not allowed to change their password.',
-		  type => 'permission',
+		  type => 'PermissionWithoutNobody',
 		  hashVar => '{permissionLevels}->{change_password}'
 		},
 		{ var => 'permissionLevels{become_student}',
@@ -1280,7 +1280,7 @@ $ConfigValues = [
 		{ var => 'permissionLevels{change_email_address}',
 		  doc => 'Allowed to change their e-mail address',
 		  doc2 => 'Users at this level and higher are allowed to change their e-mail address. Normally guest users are not allowed to change the e-mail address since it does not make sense to send e-mail to anonymous accounts.',
-		  type => 'permission',
+		  type => 'PermissionWithoutNobody',
 		  hashVar => '{permissionLevels}->{change_email_address}'
 		},
 		{ var => 'permissionLevels{view_answers}',
